crates/aura-macros/tests/boundaries/authoritative_source_on_struct.stderr
error: #[authoritative_source] may only be applied to free or impl functions
 --> tests/boundaries/authoritative_source_on_struct.rs:1:1
  |
1 | #[aura_macros::authoritative_source(kind = "runtime")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `aura_macros::authoritative_source` (in Nightly builds, run with -Z macro-backtrace for more info)
