crates/aura-macros/tests/boundaries/authoritative_source_on_struct.rs
#[aura_macros::authoritative_source(kind = "runtime")]
struct NotAFunction;

fn main() {}
